welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:5: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
		if (isFacingTrail() == true) {
                                 ^SlugSnail:11: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
    			if (isFacingTrail == false) {
                            ^