welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt() {
	while(estSurBiscuit == false){
		avance();
		if (isFacingTrail() == true) {
    		baisseBrosse();
    		avance();
    		leveBrosse();
    		} else {
    			gauche();
    			if (isFacingTrail == false) {
    				droite();droite();
    			}
    		}
	}
	prendBiscuit();
}
 
def isFacingTrail(c : Color):Boolean = {
	var couleur : String = "non"
	if (estFaceMur()==false) {
		avance();
		if (getCouleurSol()== c) {
			couleur = "oui";
		} else { 
			couleur = "non";
		}
		recule();
		if (couleur == "oui") {
			return true;
		} else {
			return false;
		}
    } else {
    	return false;
    } 
}        
